--- a/resume.tex
+++ b/resume.tex
@@ -15,14 +15,15 @@
 \begin{document}
 \noindent
 \begin{tabularx}{\linewidth}{X r}
-\multirow{4}{*}{{\fontsize{45}{55}\selectfont Yue Wu}}
+\multirow{4}{*}{{\fontsize{50}{60}\selectfont Yue Wu}}
 & \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
 & (858) 666-5847 \\
+& \href{https://almsivi.github.io}{https://almsivi.github.io} \\
 & \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI} \\
 & \href{https://www.linkedin.com/in/yue-wu-aaab2213b/}{https://www.linkedin.com/in/yue-wu-aaab2213b/}
 \end{tabularx}
 \noindent
-\textbf{Looking for full-time Software Engineer opportunities starting Summer 2020.}
+\textbf{Looking for Software Engineer internship opportunities for Summer 2021.}
 \section{Education}
 \smallskip
 \noindent
@@ -60,7 +61,7 @@
 \textbf{\large Intern Full Stack Developer}, LMT Technology, Shanghai, China & \texttt{06/2018-08/2018} \\
 \itemcols{
 \item Refactored company's product from Flash to HTML/Javascript, and from a custom backend to Spring, reducing code length and boosting execution efficiency.
-\item Pinpointed and addressed localization and responsive UI issues, making the product more foreigner-friendly and improving user experience.
+\item Pinpointed and addressed localization and responsive UI issues, making the product foreigner-friendly and improving user experience.
 \item Introduced JSDoc, a documentation format for Javascript, to the team, setting up a uniform code format.
 } \\
 \end{tabularx}
@@ -68,6 +69,13 @@
 \smallskip
 \noindent
 \begin{tabularx}{\linewidth}{X r}
+\textbf{\large Exteractive}, Full Stack Developer & \texttt{07/2020-Present} \\
+\itemcols{
+\item An interactive story web app, with React as front end and Express as back end.
+\item Implemented a user system with Postgresql where users can write stories, continue others' stories and rate their writing.
+\item Achieved responsive UI through React and Emotion, a CSS-in-JS framework.
+} \\
+
 \textbf{\large MechSuit VR}, Unity Developer & \texttt{04/2017-06/2019} \\
 \itemcols{
 \item Joined the school's Virtual Reality Club to work on a Unity fighting game featuring Steam VR (Vive).
@@ -81,13 +89,6 @@
 \item Worked in a 4-person team to create a web application with both front end (Bootstrap) and back end (Node.js) that allows user to learn different languages through translating lyrics.
 \item Developed all the database logic with sqlite for songs and scores, so that users can upload their favorite songs to the app for practice, and view their past attempts.
 \item Improved score calculation based on the number of hints the user relies on and the correctness of the answer.
-} \\
-
-\textbf{\large Flashback Music}, Android Developer & \texttt{01/2018-03/2018} \\
-\itemcols{
-\item Worked in a 5-person, Agile team to create an Android music application that records the time and location songs are played so that users could reminisce on their moods.
-\item Separated UI interaction and back end logic with Model-View-Controller pattern resulting in cleaner code.
-\item Devised separate logic for local and cloud music under a set of interfaces with Strategy and Factory patterns.
 } \\
 
 \end{tabularx}
