Added argparse and localizations

--- a/resume.tex
+++ b/resume.tex
@@ -15,7 +15,7 @@
 \begin{document}
 \noindent
 \begin{tabularx}{\linewidth}{X r}
-\multirow{4}{*}{{\fontsize{50}{60}\selectfont Yue Wu}}
+\multirow{5}{*}{{\fontsize{50}{60}\selectfont Yue Wu}}
 & \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
 & (858) 666-5847 \\
 & \href{https://almsivi.github.io}{https://almsivi.github.io} \\
@@ -23,7 +23,7 @@
 & \href{https://www.linkedin.com/in/yue-wu-aaab2213b/}{https://www.linkedin.com/in/yue-wu-aaab2213b/}
 \end{tabularx}
 \noindent
-\textbf{Looking for Software Engineer internship opportunities for Summer 2021.}
+\textbf{I am currently looking for Software Engineer internship opportunities for Summer 2021.}
 \section{Education}
 \smallskip
 \noindent
@@ -72,7 +72,7 @@
 \textbf{\large Exteractive}, Full Stack Developer & \texttt{07/2020-Present} \\
 \itemcols{
 \item An interactive story web app, with React as front end and Express as back end.
-\item Implemented a user system with Postgresql where users can write stories, continue others' stories and rate their writing.
+\item Implemented a user system with MongoDB where users can write stories, continue others' stories and rate their writing.
 \item Achieved responsive UI through React and Emotion, a CSS-in-JS framework.
 } \\
 
