--- a/resume - Chinese.tex
+++ b/resume - Chinese.tex
@@ -1,131 +1,91 @@
 \documentclass[UTF8]{ctexart}
 \usepackage[a4paper, margin=0.5in]{geometry}
 \usepackage{anyfontsize, tabularx, multirow, hyperref, titlesec, comment, enumitem}
-
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
 \titlespacing{\section}{0pt}{3pt}{3pt}
-
 \thispagestyle{empty}
-
-% List style
 \setlist[itemize]{leftmargin=*, before=\vspace{-0.5\baselineskip}, after=\vspace{-\baselineskip}, nosep}
-
-% Customized multicolumn
 \newcommand{\itemcols}[1]{
-	\multicolumn{2}{p{\dimexpr \linewidth-2\tabcolsep}}{
-		\begin{itemize}
-			#1
-		\end{itemize}
-	}
+\multicolumn{2}{p{\dimexpr \linewidth-2\tabcolsep}}{
+\begin{itemize}
+#1
+\end{itemize}
 }
-
+}
 \begin{document}
-	\noindent
-	\begin{tabularx}{\linewidth}{X r}
-		\multirow{3}{*}{{\fontsize{40}{50}\selectfont 吴越}}
-		& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
-		& +1-(858) 666-5847 \\
-		& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI}
-	\end{tabularx}
-	
-	
-	% If explicitly asked to, uncomment.
-	\begin{comment}
-	\noindent
-	%\textbf{寻求2019年6-9月软件工程方面的实习。}
-	\end{comment}
-	
-	% Header including mailing address
-	\begin{comment}
-	\begin{tabularx}{\linewidth}{X r}
-	\multirow{5}{*}{{\fontsize{45}{60}\selectfont 吴越}} 
-	& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
-	& +1-(858) 666-5847 \\
-	& 8840 Costa Verde Blvd. Apt. 3322 \\
-	& San Diego, CA 92122
-	& United States
-	\end{tabularx}
-	\end{comment}
-	
-	
-	\section{教育经历}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{X r}
-		\textbf{\large 美国加州大学圣地亚哥分校}（University of California, San Diego） & \texttt{2016/09-2020/06} \\
-		\itemcols {
-			\item 专业：计算机科学（B.S. Computer Science），辅修：视觉艺术（计算与艺术） \textbf{(GPA: 3.90/4)
-			%\item 已修课程：数据结构、算法、软件工程、交互设计、图形学、离散数学、计算理论，操作系统
-		}
-	}
-	\end{tabularx}
-	
-	
-	\section{技能}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{l X}
-		\texttt{语言} & C\#, Java, HTML, CSS, Javascript, C, C++, Python, \LaTeX \\
-		\texttt{技术} & Unity, SteamVR, Windows Desktop, Android, JavaFX, jQuery, Node.js, SQL, OpenGL, React.js \\
-		\texttt{软件} & Visual Studio, Android Studio, vim, Blender, git, Linux
-	\end{tabularx}
-
-
-	\section{工作经验}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\textwidth}{X r}
-		\textbf{\large 实习前端工程师}，莱曼特信息科技，中国上海 & \texttt{2018/06-2018/08} \\
-		\itemcols{
-			\item 参加软件的改版，从Flash迁移至HTML5。减少代码量，加快运行速度。
-			\item 改善产品的英文版本，使其更容易被国外客户所理解。与国外客户会面，向其宣传产品。
-			\item 引入JSDoc，对Javascript进行规范，在公司内建立统一的代码风格。
-		} 
-	\end{tabularx}
-	
-	
-	\section{其他项目}
-	\smallskip
-	\noindent
-	\begin{tabularx}{\linewidth}{X r}
-		\textbf{\large Bodylogical AR}，Unity开发者 & \texttt{2018/10至今} \\
-		\itemcols{
-			\item 与UCSD计算机部门的Jurgen Schulze教授一同开发iOS AR应用以展示Bodylogical（一个人体健康数据模拟系统）的功能和应用前景。
-			\item 使用C\#设计面板，通过3D带状图（Ribbon chart）显示健康数据，利用AR同时显示多组数据进行对比。
-			\item 使用Unity动画模组，开发人物动画，以直观地显示人物的健康状况。
-			\item 目前正在开发“内部原理”可视化模组，通过人物内部（器官、循环等）的变化反映健康状况的变化。
-		} \\
-		
-		\textbf{\large MechSuit VR}，Unity开发者 & \texttt{2017/04至今} \\
-		\itemcols{
-			\item 5人小组项目，使用Steam VR和Unity编写VR游戏。玩家可以穿着格斗机甲，在竞技场中战斗。
-			\item 开发了适用于机甲的逆运动学系统（inverse kinematic system）。通过追踪玩家头部（VR眼镜）和手部（VR控制器）的位置，机甲的手臂会根据玩家手臂而移动，使得玩家可以高效控制机甲。
-			\item 编写了动力系统，玩家可以在现实空间中摆动身体以实现在虚拟空间中的位移。相比控制摇杆，这种操纵方式给予玩家身临其境之感。
-			\item 设计了生命与武器系统，以及配套UI来显示玩家生命与当前武器。使用策略（Strategy）模式编写脚本，使其能够被轻易扩展，可支持各种伤害类型与伤害抗性。
-			\item 目前正在利用Tensorflow的深度学习功能开发玩家动作识别系统，以实现武器切换等多种功能。
-		} \\
-		
-		\textbf{\large Transracer}，全栈开发者 & \texttt{2018/04-2018/06} \\
-		\itemcols{
-			\item 4人小组项目，共同开发网页app，前端使用Bootstrap，后端使用Node.js。用户通过翻译歌词来学习外语。
-			\item 使用sqlite编写所有数据库逻辑，数据库用于存储歌曲与用户得分，用户可将喜欢的歌曲上传到网站以练习。
-			\item 改善了计算得分逻辑：app会基于用户使用提示的数量及回答的正确率来计算用户得分，使得分更为准确。
-		} \\
-		
-		\textbf{\large Flashback Music}，安卓开发者 & \texttt{2018/01-2018/03} \\
-		\itemcols{
-			\item 5人小组项目，遵循敏捷（Agile）开发原则，开发安卓程序。这款音乐app会记录用户听歌的时间和地点。
-			\item 使用Model-View-Controller模式，分离UI交互与后台逻辑，使得代码更加清晰。
-			\item 使用策略（Strategy）模式和工厂（Factory）模式，为本地音乐和云端音乐设计了不同的逻辑，并将其统一在同一套接口（interface）之下。
-		}
-	\end{tabularx}
-
-\begin{comment}
-		\textbf{\large WayAround}，前端开发者 & \texttt{2018/01-2018/03} \\
+\noindent
+\begin{tabularx}{\linewidth}{X r}
+\multirow{4}{*}{{\fontsize{50}{60}\selectfont 吴越}}
+& \href{mailto:yuw264@ucsd.edu}{yuw264@ucsd.edu} \\
+& (+1) (858) 666-5847 \\
+& \href{https://github.com/ALMSIVI}{https://github.com/ALMSIVI} \\
+& \href{https://www.linkedin.com/in/yue-wu-aaab2213b/}{https://www.linkedin.com/in/yue-wu-aaab2213b/}
+\end{tabularx}
+\section{教育经历}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{X r}
+\textbf{\large 加州大学圣地亚哥分校} & \texttt{2016/09-2021/12} \\
 \itemcols{
-\item 4人小组项目，共同开发网页程序的视觉原型（mockup）。该导航软件允许用户根据喜好定义线路。
-\item 在完成纸质原型后，使用Bootstrap和jQuery开发了首页。编写了两版首页以供A/B测试，分析用户选择喜好所花费的时间，以了解用户如何接触一款新产品，并根据结果修改首页使其对用户更加友好。
-\item 完善评价页，根据用户之前选择的喜好动态生成表单，使页面更为精简。	
+\item 专业：计算机科学（B.S.与 M.S.） \textbf{(GPA: 3.92/4)}
+}
+\end{tabularx}
+\section{技能}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{l X}
+\texttt{语言} & C\#, Java, Javascript/Typescript, HTML, CSS, C/C++, Python, \LaTeX, Shader (GLSL/HLSL) \\
+\texttt{框架} & Unity, SteamVR, WPF, Android, jQuery, Node.js, SQL, OpenGL/WebGL, React.js, THREE.js \\
+\texttt{软件} & vim, git, Linux
+\end{tabularx}
+\section{工作经验}
+\smallskip
+\noindent
+\begin{tabularx}{\textwidth}{X r}
+\textbf{\large Unity开发者}, UCSD Qualcomm Institute, 加州拉霍亚 & \texttt{2018/10至今} \\
+\itemcols{
+\item 为美国普华永道的Bodylogical系统开发iOS AR应用。
+\item 在Unity中设计并实现了3套不同的可视化模组，数据以时间排列，分布在3维空间中，用户可以方便地理解Body logical的核心功能。
+\item 从头编写了一套基于XML的本地化系统与教程系统，使得非美国客户及对AR不熟悉的客户可以轻松上手。
 } \\
-\end{comment}
+\textbf{\large 实习前端工程师}, 阿里巴巴集团, 中国杭州 & \texttt{2019/06-2019/08} \\
+\itemcols{
+\item 基于力导向图原理和Sugiyama算法，用Typescript搭建对图类结构进行3D可视化的库，以替换turf.js。
+\item 基于Marching Square算法开发了一套地理模型生成服务，比turf.js自带算法精确100倍，并用于阿里9号馆及双11等数据大屏展示中。
+\item 与达摩院的裸眼3D团队合作，研究3维空间下基于Unity/WebGL的人机交互和数据可视化。探索了Entitas框架并编写Shader实现多样的视觉效果。
+} \\
+\textbf{\large 实习全栈工程师}, 莱曼特信息科技, 中国上海 & \texttt{2018/06-2018/08} \\
+\itemcols{
+\item 参加软件的改版，从Flash迁移至HTML5。减少代码量，加快运行速度。
+\item 完善产品的本地化与响应式UI界面，使其对外国用户更加友好，提升用户体验。
+\item 引入JSDoc，对Javascript进行规范，在公司内建立统一的代码风格。
+} \\
+\end{tabularx}
+\section{项目经历}
+\smallskip
+\noindent
+\begin{tabularx}{\linewidth}{X r}
+\textbf{\large Exteractive}, 全栈工程师 & \texttt{2020/07至今} \\
+\itemcols{
+\item 交互小说类型的网页应用，以React作为前端，Express作为后端。
+\item 使用MongoDB作为数据库开发了用户系统，用户可以编写故事，续写其他人的故事并对其做出评价。
+\item 利用React和Emotion等库实现了响应式UI及本地化。
+} \\
+
+\textbf{\large MechSuit VR}, Unity开发者 & \texttt{2017/04-2019/06} \\
+\itemcols{
+\item 学校虚拟现实俱乐部的小组项目，使用Steam VR和Unity开发基于HTC Vive设备的VR游戏。
+\item 实现逆运动学系统，通过VR眼镜和手柄的位置来控制机甲手臂的位置，增加代入感和玩家控制机甲的效率。
+\item 编写动力系统，以玩家在物理空间中的移动作为输入，对虚拟空间中的机甲带来推力，玩家无需使用手柄来移动机甲，这种操纵方式给予玩家身临其境之感。
+\item 设计了生命值系统与武器系统，并使用MVC模型设计了生命值与弹药显示的UI。利用策略模式等设计模式，编写脚本使得开发人员能迅速增加其他伤害类型与机甲抗性。
+} \\
+
+\textbf{\large Transracer}, 全栈工程师 & \texttt{2018/04-2018/06} \\
+\itemcols{
+\item 4人小组项目，共同开发网页app，前端使用Bootstrap，后端使用Node.js。用户通过翻译歌词来学习外语。
+\item 使用sqlite编写所有数据库逻辑，数据库用于存储歌曲与用户得分，用户可将喜欢的歌曲上传到网站以练习。
+\item 改善了计算得分逻辑：app会基于用户使用提示的数量及回答的正确率来计算用户得分，使得分更为准确。
+} \\
+
+\end{tabularx}
 \end{document}
