--- a/templates/declarations.tex
+++ b/templates/declarations.tex
@@ -1,4 +1,5 @@
 \documentclass[10pt, letterpaper]{article}
+\usepackage[T1]{fontenc}
 \usepackage[letterpaper, margin=0.5in]{geometry}
 \usepackage{anyfontsize, tabularx, multirow, hyperref, titlesec, comment, enumitem}
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
